fix: Bottom food recipe spacing

--- a/css/recipes.css
+++ b/css/recipes.css
@@ -1,5 +1,9 @@
 /* RECIPE PAGES */
 
+main {
+  margin-bottom: 0;
+}
+
 #daftar-makanan {
   font-size: 2rem;
   text-align: center;
